/*
 * Represents a target service endpoint that can be either a resource provider or a tool invoker.
 *
 * This class encapsulates information about a service, including its target and configurations,
 * providing a structured way to represent and manage services in a system.
 */

syntax = "proto3";

package ai.wanaku.capabilities.sdk.api.types.providers;

message ServiceTarget {
  optional string id = 1;
  string serviceName = 2;
  string host = 3;
  int32 port = 4;
  string serviceType = 5;
  optional string serviceSubType = 6;
  map<string, string> configurations = 7;
  optional string languageName = 8;
  optional string languageType = 9;
  optional string languageSubType = 10;
}